# A-Gut-Health-Coach

./: .gitignore  README.md  gut_health_evaluation_20250723_103358.json  main.py  pyproject.toml  requirements.txt
app/ai_component/: config.py  eval.py  exception.py  llm.py
app/ai_component/core/: prompts.py
app/ai_component/data/: data_extraction.py
app/ai_component/graph/: edges.py  graph.py  nodes.py  state.py
app/ai_component/graph/utils/: chains.py
app/ai_component/modules/: hybrid_retriever.py  vector_store.py
bm25_retrievers/: health_articles_collection_bm25.pkl
