[project]
name = "a-gut-health-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cohere>=5.16.1",
    "langchain>=0.3.26",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.4",
    "opik>=1.8.6",
    "pandas>=2.3.1",
    "protobuf==4.21.12",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
]
